<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@color/colorPrimary">

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:gravity="center">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tollbar"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingTop="30dp"
                        android:paddingBottom="30dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"
                            android:gravity="center"
                            android:padding="20dp"
                            android:text="@string/login_now"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/loginemailId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_email_black_24dp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:padding="20dp"
                            android:textColorHint="#FFFCFC" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/loginPassId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_lock_black_24dp"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="20dp"
                            android:textColorHint="#FFFCFC" />

                        <TextView
                            android:id="@+id/forgetPASS"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginStart="25dp"
                            android:text="@string/forgot_password"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                        <Button
                            android:id="@+id/loginId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="40dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/button_bg"
                            android:padding="10dp"
                            android:text="@string/login"
                            android:textColor="#fff"
                            android:textSize="20sp" />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/don_t_have_an_account"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/texttttt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sign_up"
                                android:textColor="#FF5722"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
