<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CreateIdeaFragment"
    >

    <ScrollView
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/showphotoID"
                        android:scaleType="centerCrop"
                        android:src="@drawable/images"
                        android:layout_width="match_parent"
                        android:layout_height="250dp" />

                    <Button
                        android:id="@+id/selectphotoId"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"
                        android:textColor="@color/white"
                        android:text="@string/choose_a_photo"
                        android:background="@drawable/bag_right2"
                        android:layout_margin="20sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:text="Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/ideaTitelID"
                        android:gravity="start"
                        android:background="@drawable/bag_left"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="60dp"
                        />

                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:text="@string/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/ideaDesId"
                        android:gravity="start"
                        android:background="@drawable/bag_left"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        />

                    <Button
                        android:id="@+id/UploadID"
                        android:paddingLeft="70dp"
                        android:paddingRight="70dp"
                        android:textColor="@color/white"
                        android:text="@string/upload"
                        android:background="@drawable/bag_right"
                        android:layout_margin="20sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

    </ScrollView>


</RelativeLayout>



