<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.core.widget.NestedScrollView
                android:layout_marginBottom="70dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                    <LinearLayout
                        android:layout_marginTop="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="30dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:src="@drawable/proico"
                            app:civ_border_width="2dp"
                            app:civ_border_color="@color/colorPrimary"
                            android:layout_width="120dp"
                            android:layout_height="120dp" />
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/black"
                            android:id="@+id/userNameIDpro"
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="24sp"
                            android:padding="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="5dp"
                            android:background="@color/grey_active" />

                        <LinearLayout
                            android:paddingLeft="10dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <TextView
                                android:textSize="18sp"
                                android:padding="10dp"
                                android:text="@string/id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/profileID"
                                android:textSize="18sp"
                                android:padding="10dp"
                                android:text=""
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="5dp"
                            android:background="@color/grey_active" />


                        <LinearLayout
                            android:paddingStart="10dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <TextView
                                android:textSize="18sp"
                                android:padding="10dp"
                                android:text="@string/total_votes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/profiletotalvote"
                                android:textSize="18sp"
                                android:padding="10dp"
                                android:text=""
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="5dp"
                            android:background="@color/grey_active" />

                        <LinearLayout
                            android:layout_marginBottom="10dp"
                            android:paddingStart="10dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textSize="18sp"
                                android:padding="10dp"
                                android:text="@string/total_idea_submit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/profileIdeasubmit"
                                android:textSize="18sp"
                                android:padding="10dp"
                                android:text=""
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>


                        <TextView
                            android:textSize="20sp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="@string/your_bookmark_list"
                            android:background="@color/blue_bg_light"
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ProgressBar
                            android:visibility="gone"
                            android:id="@+id/progress_circular44"
                            android:layout_marginTop="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/bookmarkrecyID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                        </androidx.recyclerview.widget.RecyclerView>



                        <TextView
                            android:textSize="20sp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="@string/your_ideas"
                            android:background="@color/blue_bg_light"
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                        <ProgressBar
                            android:visibility="gone"
                            android:id="@+id/progress_circular2"
                            android:layout_marginTop="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/proRecyId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                        </androidx.recyclerview.widget.RecyclerView>




                    </LinearLayout>



            </androidx.core.widget.NestedScrollView>
        </RelativeLayout>



</RelativeLayout>
