<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="350dp">
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="50dp"
                android:id="@+id/lin"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    app:contentPadding="5dp"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_below="@+id/tollbar"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginBottom="20dp"
                            android:padding="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="25sp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="@string/create_a_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/usernameId"
                            android:drawableStart="@drawable/ic_account_circle_black_24dp"
                            android:padding="20dp"
                            android:hint=" Username"
                            android:inputType="text"
                            android:textColorHint="#FFFCFC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/UniuserId"
                            android:drawableStart="@drawable/ic_account_circle_black_24dp"
                            android:padding="20dp"
                            android:hint="@string/university_id"
                            android:inputType="text"
                            android:textColorHint="#FFFCFC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/emailId"
                            android:drawableStart="@drawable/ic_email_black_24dp"
                            android:padding="20dp"
                            android:hint=" Email"
                            android:inputType="textEmailAddress"
                            android:textColorHint="#FFFCFC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/passwordId"
                            android:drawableStart="@drawable/ic_lock_black_24dp"
                            android:padding="20dp"
                            android:hint=" Password"
                            android:inputType="textPassword"
                            android:textColorHint="#FFFCFC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />


                        <Button
                            android:id="@+id/signupId"
                            android:padding="10dp"
                            android:layout_marginTop="30dp"
                            android:textSize="20dp"
                            android:textColor="#fff"
                            android:layout_marginLeft="40dp"
                            android:layout_marginRight="40dp"
                            android:background="@drawable/button_bg"
                            android:text="Sign Up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                        <LinearLayout
                            android:layout_marginBottom="40dp"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="15sp"
                                android:text="@string/already_have_an_account"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/backloginpage"
                                android:textStyle="bold"
                                android:textColor="#F44336"
                                android:textSize="15sp"
                                android:text="Login now"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
